--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "apollo-boost": "0.4.4",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
