--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "apollo-boost": "0.4.4",
+    "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "react": "16.12.0",
