--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "devDependencies": {
     "eslint": "^5.12.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.0"
   }
 }
