--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "graphql-tag": "^2.10.1",
     "react": "16.12.0",
     "react-apollo": "2.5.8",
+    "react-d3-radar": "^1.0.0-rc6",
     "react-dom": "16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8"
